--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Sprinter3">
 <meta name="theme-color" content="#5bbad5">
 
-  <title>Runhr</title>
+<link rel="stylesheet" href="semantic.min.css" type="text/css">
+
+  <title>Runhr v3</title>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
