--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Todo List Version.">
+  <meta name="description" content="Productivity simulator">
   <meta name="author" content="automotola">
 
 
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=Sprinter3">
-<link rel="icon" type="image/png" href="/favicon-32x32.png?v=Sprinter3" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-194x194.png?v=Sprinter3" sizes="194x194">
-<link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=Sprinter3" sizes="192x192">
-<link rel="icon" type="image/png" href="/favicon-16x16.png?v=Sprinter3" sizes="16x16">
-<link rel="manifest" href="/manifest.json?v=Sprinter3">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=Sprinter3" color="#5bbad5">
-<link rel="shortcut icon" href="/favicon.ico?v=Sprinter3">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=Sprinter4">
+<link rel="icon" type="image/png" href="/favicon-32x32.png?v=Sprinter4" sizes="32x32">
+<link rel="icon" type="image/png" href="/favicon-194x194.png?v=Sprinter4" sizes="194x194">
+<link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=Sprinter4" sizes="192x192">
+<link rel="icon" type="image/png" href="/favicon-16x16.png?v=Sprinter4" sizes="16x16">
+<link rel="manifest" href="/manifest.json?v=Sprinter4">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=Sprinter4" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon.ico?v=Sprinter4">
 <meta name="apple-mobile-web-app-title" content="Runhr">
 <meta name="application-name" content="Runhr">
 <meta name="msapplication-TileColor" content="#5bbad5">
-<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Sprinter3">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Sprinter4">
 <meta name="theme-color" content="#5bbad5">
 
-<link rel="stylesheet" href="semantic.min.css" type="text/css">
+<link rel="stylesheet" href="/semantic.min.css?v=Sprinter4" type="text/css" cross-origin="anonymous">
 
-  <title>Runhr v3</title>
+  <title>Runhr v1</title>
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
